# cf-jupyterlab-uv

./: README.md  jupyter_notebook_config.py  manifest.yml  nbsample.ipynb  pyproject.toml
